# fast-api-clean-architecture

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py
